[gd_scene load_steps=5 format=3 uid="uid://cem6ei5r0e8y5"]

[ext_resource type="Script" path="res://Scripts/cloud_projectile.gd" id="1_tpapo"]
[ext_resource type="Texture2D" uid="uid://cci0o060kouql" path="res://Sprites/bigpinkcloud.png" id="2_t7vil"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4wcwp"]

[sub_resource type="Curve" id="Curve_53rae"]
min_value = -1.0
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CloudProjectile" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_tpapo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4wcwp")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.352941)
texture_filter = 1
amount = 50
lifetime = 0.1
randomness = 1.0
texture = ExtResource("2_t7vil")
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 0.04
hue_variation_min = -0.07
hue_variation_max = 0.06
hue_variation_curve = SubResource("Curve_53rae")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
